# Final-Year

./: .env.example  Agile_phase.md  POSTGRES_SETUP.md  PROJECT_SETUP.md  Project proposal.docx  README.md  Timetable_System_Architecture.docx  init_db.py  main.py  proposal.md  pyproject.toml  requirements.txt  reset_database.py  seed_database.py  system_architecture.md  test_db.py
app/: config.py
app/domain/models/: __init__.py  base.py  course.py  lecturer.py  timeslot.py  timetable.py  user.py  venue.py
app/domain/services/: __init__.py  auth.py  course_service.py  lecturer_service.py  pdf_service.py  scheduler.py  timetable_service.py  venue_service.py
app/infrastructure/database/: __init__.py  connection.py  middleware.py
app/infrastructure/security/: __init__.py  jwt.py  middleware.py  password.py
app/presentation/components/: __init__.py  layout.py  tables.py  timetable_view.py
app/presentation/components/shared/: __init__.py  theme.py
app/presentation/routes/: auth.py  courses.py  dashboard.py  landing.py  lecturers.py  student.py  timetable.py  venues.py
