[project]
name = "timetable-system"
version = "0.1.0"
description = "Automated Timetable Scheduling System with CSP algorithm"
requires-python = ">=3.10"
dependencies = [
    "fasthtml>=0.6.0",
    "faststrap>=0.5.3",
    "sqlalchemy>=2.0.25",
    "psycopg2-binary>=2.9.9",
    "bcrypt>=4.1.2",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "pyjwt>=2.8.0",
    "python-constraint>=1.4.0",
    "reportlab>=4.0.0",
    "pandas>=2.1.0",
    "openpyxl>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.1.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.10"
strict = false
warn_return_any = true
warn_unused_configs = true
